[package]
name = "stripe-integration"
version = "0.1.0"
authors = ["François-Guillaume Ribreau <github@fgribreau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.0"
actix-web = "2.0.0"
async-trait = "0.1.30"
chrono = "*"
clippy = "0.0.302"
config = "0.10"
futures = "0.3.4"
lapin = "1.2.1"
log = "0.4.8"
pretty_env_logger = "*"
sentry = "0.19.0"
sentry-log = { version = "0.19.0", features = ["env_logger"] }
serde = "1.0.106"
serde_json = "1.0.51"
tokio = { version = "1.0", features = ["time", "rt"] }
thiserror = "1.0.23"
hmac = "0.10.1"
sha2 = "0.9.2"
reqwest = { version = "0.10.10", features = ["json"] }
serde_qs = "0.8.2"

[dev-dependencies]
insta = "1.3.0"
