[package]
name = "stripe-integration"
version = "0.1.0"
authors = ["François-Guillaume Ribreau <github@fgribreau.com>"]
edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Easiest Stripe Integration for your SaaS (Checkout + Portails)"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://github.com/FGRibreau/stripe-integration"
homepage = "https://github.com/FGRibreau/stripe-integration"
repository = "https://github.com/FGRibreau/stripe-integration"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "./README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["stripe", "checkout", "saas"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["web-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.0"
actix-web = "2.0.0"
async-trait = "0.1.30"
chrono = "*"
clippy = "0.0.302"
config = "0.10"
futures = "0.3.4"
lapin = "1.2.1"
log = "0.4.8"
pretty_env_logger = "*"
sentry = "0.19.0"
sentry-log = { version = "0.19.0", features = ["env_logger"] }
serde = "1.0.106"
serde_json = "1.0.51"
tokio = { version = "1.0", features = ["time", "rt"] }
thiserror = "1.0.23"
hmac = "0.10.1"
sha2 = "0.9.2"
reqwest = { version = "0.10.10", features = ["json"] }
serde_qs = "0.8.2"

[dev-dependencies]
insta = "1.3.0"
